fix form window responsiveness on small screens

--- a/css/container.css
+++ b/css/container.css
@@ -1,6 +1,6 @@
-.container{
-    max-width:500px;
+.container {
+    max-width: 500px;
+    width: 100%;
     margin: 0 auto;
     padding: 20px 20px;
-    overflow-x: auto;
 }
