--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,13 @@
 .form__labelText {
     display: inline-block;
-    width: 100px;
+    max-width: 100px;
+    width: 100%;
     margin: 5px 5px 5px 0px;
 }
 
 .form__field {
-    width: 235px;
+    max-width: 235px;
+    width: 100%;
     padding: 5px;
     border-radius: 5px;
 }
@@ -15,8 +17,14 @@
     padding: 5px 50px;
 }
 
+.form__legend {
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .form__button {
-    width: 344px;
+    max-width: 344px;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     margin: 10px 0px;
@@ -31,12 +39,7 @@
     background-color: rgb(215, 219, 222);
 }
 
-.form__legend {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.form__bmiResoult {
+.form__bmiResult {
     font-size: 20px;
     margin-left: 30px;
 }
@@ -45,4 +48,3 @@
     font-weight: 700px;
     font-size: 18px;
 }
-
